crates/snapshots/snapshots/cli_snapshots__html_workspaces__ambiguous_preprocessor_source.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: ambiguous_preprocessor_source

--- step: preview ---
status: 0
stdout: "Previewed 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
