crates/snapshots/snapshots/cli_snapshots__html_workspaces__generated_css_same_stem.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: generated_css_same_stem

--- step: write ---
status: 0
stdout: "--- a/index.html\n+++ b/index.html\n@@ -1,1 +1,1 @@\n-<link rel=\"stylesheet\" href=\"./generated.css\"><div class=\"card generated\"></div>\n+<link rel=\"stylesheet\" href=\"./generated.css\"><div class=\"card generated text-[blue]\"></div>\nApplied 1 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[inferred-preprocessor-source] generated.css The linked CSS was matched to the unique preprocessor filename generated.scss.\nwarning[retained-global-rule] generated.scss:1:1-1:28 Global CSS is never deleted automatically.\n"
workspace delta:
  modified index.html
    before: "<link rel=\"stylesheet\" href=\"./generated.css\"><div class=\"card generated\"></div>\n"
    after: "<link rel=\"stylesheet\" href=\"./generated.css\"><div class=\"card generated text-[blue]\"></div>\n"
