crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_attribute_edges.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_attribute_edges

--- step: write ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[dynamic-html-attribute] entity.html:1:67-1:80 This HTML attribute is not a safely writable quoted literal.\nwarning[retained-global-rule] legacy.css:1:1-1:25 Global CSS is never deleted automatically.\nwarning[dynamic-html-attribute] valueless.html:1:50-1:55 This HTML attribute is not a safely writable quoted literal.\n"
workspace delta:
  unchanged
