crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_base_resolution.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_base_resolution

--- step: write ---
status: 0
stdout: "--- a/empty.html\n+++ b/empty.html\n@@ -1,1 +1,1 @@\n-<base href=\"\"><link rel=\"stylesheet\" href=\"./assets/legacy.css\"><div class=\"card\"></div>\n+<base href=\"\"><link rel=\"stylesheet\" href=\"./assets/legacy.css\"><div class=\"card p-[13px]\"></div>\n--- a/local.html\n+++ b/local.html\n@@ -1,1 +1,1 @@\n-<base href=\"./assets/\"><link rel=\"stylesheet\" href=\"legacy.css\"><div class=\"card\"></div>\n+<base href=\"./assets/\"><link rel=\"stylesheet\" href=\"legacy.css\"><div class=\"card p-[13px]\"></div>\nApplied 2 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[retained-global-rule] assets/legacy.css:1:1-1:25 Global CSS is never deleted automatically.\nwarning[unsupported-html-base] remote.html:1:13-1:33 A remote or unrepresentable base URL prevents safe stylesheet link resolution.\nwarning[unsupported-html-stylesheet-link] remote.html:1:64-1:74 Only local package stylesheet links are analyzed.\n"
workspace delta:
  modified empty.html
    before: "<base href=\"\"><link rel=\"stylesheet\" href=\"./assets/legacy.css\"><div class=\"card\"></div>\n"
    after: "<base href=\"\"><link rel=\"stylesheet\" href=\"./assets/legacy.css\"><div class=\"card p-[13px]\"></div>\n"
  modified local.html
    before: "<base href=\"./assets/\"><link rel=\"stylesheet\" href=\"legacy.css\"><div class=\"card\"></div>\n"
    after: "<base href=\"./assets/\"><link rel=\"stylesheet\" href=\"legacy.css\"><div class=\"card p-[13px]\"></div>\n"
