crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_dynamic_attribute.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_dynamic_attribute

--- step: write ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unresolved-selector-target] Button.module.css:1:1-1:27 No exclusively supported className references were found.\nwarning[dynamic-html-attribute] index.html:2:16-2:33 This HTML attribute is not a safely writable quoted literal.\n"
workspace delta:
  unchanged
