crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_invalid_force.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_invalid_force

--- step: failure ---
status: 1
stdout: ""
stderr: "tw-migrate: Failed to parse [WORKSPACE]/index.html: eof-in-tag\n"
workspace delta:
  unchanged

--- step: force ---
status: 0
stdout: "Previewed 0 file(s); 0 rule(s) converted, 0 retained.\n"
stderr: "skipped[.] Failed to parse [WORKSPACE]/index.html: eof-in-tag\n"
workspace delta:
  unchanged
