crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_irrelevant_inline_script.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_irrelevant_inline_script

--- step: write ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-.button { padding: 13px; }\n--- a/index.html\n+++ b/index.html\n@@ -1,2 +1,2 @@\n-<link rel=\"stylesheet\" href=\"./Button.module.css\"><button class=\"button\">HTML</button>\n+<button class=\"button p-[13px]\">HTML</button>\n <script>console.log(\"buttons ready\");</script>\nApplied 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  deleted Button.module.css
    before: ".button { padding: 13px; }\n"
  modified index.html
    before: "<link rel=\"stylesheet\" href=\"./Button.module.css\"><button class=\"button\">HTML</button>\n<script>console.log(\"buttons ready\");</script>\n"
    after: "<button class=\"button p-[13px]\">HTML</button>\n<script>console.log(\"buttons ready\");</script>\n"
