crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_late_import.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_late_import

--- step: preview ---
status: 0
stdout: "--- a/index.html\n+++ b/index.html\n@@ -1,1 +1,1 @@\n-<link rel=\"stylesheet\" href=\"./base.css\"><div class=\"existing legacy\"></div>\n+<link rel=\"stylesheet\" href=\"./base.css\"><div class=\"existing legacy p-[13px]\"></div>\nPreviewed 1 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[retained-global-rule] base.css:1:1-1:29 Global CSS is never deleted automatically.\nwarning[unsupported-at-rule] base.css:2:1-2:23 The rule is outside the supported declaration or selector subset.\n"
workspace delta:
  unchanged
