crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_linked_conflict.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_linked_conflict

--- step: write ---
status: 0
stdout: "Applied 0 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[batch-stylesheet-conflict] a.css:1:1-1:25 Generated utilities `p-[13px]` and `p-[17px]` conflict on the same source element, so the contributing rule is retained.\nwarning[batch-stylesheet-conflict] b.css:1:1-1:25 Generated utilities `p-[13px]` and `p-[17px]` conflict on the same source element, so the contributing rule is retained.\n"
workspace delta:
  unchanged
