crates/snapshots/snapshots/cli_snapshots__html_workspaces__html_linked_stylesheets.snap
---
source: crates/snapshots/tests/cli_snapshots/html_workspaces.rs
expression: document
---
case: html_linked_stylesheets

--- step: write ---
status: 0
stdout: "--- a/index.html\n+++ b/index.html\n@@ -1,1 +1,1 @@\n-<link rel=\"stylesheet\" href=\"./a.css\"><link rel=\"stylesheet\" href=\"./b.css\"><div class=\"card\"></div><p class=\"note\"></p>\n+<link rel=\"stylesheet\" href=\"./a.css\"><link rel=\"stylesheet\" href=\"./b.css\"><div class=\"card p-[13px]\"></div><p class=\"note text-[red]\"></p>\nApplied 1 file(s); 0 rule(s) converted, 2 retained.\n"
stderr: "warning[retained-global-rule] a.css:1:1-1:25 Global CSS is never deleted automatically.\nwarning[retained-global-rule] b.css:1:1-1:22 Global CSS is never deleted automatically.\n"
workspace delta:
  modified index.html
    before: "<link rel=\"stylesheet\" href=\"./a.css\"><link rel=\"stylesheet\" href=\"./b.css\"><div class=\"card\"></div><p class=\"note\"></p>\n"
    after: "<link rel=\"stylesheet\" href=\"./a.css\"><link rel=\"stylesheet\" href=\"./b.css\"><div class=\"card p-[13px]\"></div><p class=\"note text-[red]\"></p>\n"
